# hot-swapping-state-machines

./: .gitignore  CHANGELOG.md  README.md  hot-swapping-state-machines.cabal
app/: Main.hs
erlang-example/: counter.erl  counterV2.erl
src/: AbstractMachine.hs  Code.hs  Compiler.hs  Correctness.hs  Interpreter.hs  LibMain.hs  StateMachine.hs  Syntax.hs
src/Example/: Counter.hs
